--- a/products.html
+++ b/products.html
@@ -228,7 +228,7 @@ h1{
 
 </div>
 </div>
-
+<div id="cartModal" class="modal"> <div class="modal-content"> <h3>🧺 محتويات السلة</h3> <div id="cartItems"></div> <p>💰 المجموع: <span id="modalTotal">0.00</span> JOD</p> <div class="payments"> <div onclick="payCOD()" class="pay">💵 الدفع عند الاستلام</div> <div onclick="payOnline()" class="pay">💳 الدفع الإلكتروني</div> <div onclick="requestDelivery()" class="pay">🚚 طلب توصيل</div> </div> <button class="close" onclick="closeCart()">إغلاق</button> </div> </div>
 <footer class="site-footer">
 جميع الحقوق محفوظة © 2026 | أسواق دير العسل للخضار والفواكه
 </footer>
