--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
 <body>
 
 <section class="hero">
-  <img src="images/خلفيه.png" class="corner-img veggies" alt="خضار">
+  <img src="images/واصل-removebg-preview.png" class="corner-img veggies" alt="خضار">
   <div class="profile-wrapper">
     <div class="glow-bg"></div>
     <img src="images/عبي.png" class="profile-img" alt="المدير">
