--- a/index.html
+++ b/index.html
@@ -355,16 +355,12 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
   </div>
 </div>
 
-<div class="features">
-  <span>💻 موقع احترافي</span>
-  <span>⚙️ لوحة تحكم</span>
-  <span>🚚 توصيل</span>
-  <span>💵 دفع عند الاستلام</span>
-</div>
+
 
 
 <section class="content">
-  <button class="cta">🛍️ اطلب بكل سهولة</button>
+
+  <a href="products.html" class="cta">🛍️ اطلب بكل سهولة</a>
 </section>
 
 <div class="section">
