--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
     <div class="card">
       <h3>لوحة تحكم كاملة</h3>
       <p>إدارة الطلبات، المنتجات، والتقارير اليومية بسهولة</p>
-      <iframe src="dashboard.html" width="100%" height="600px" style="border:none;"></iframe>
+    <iframe src="products.html" width="100%" height="700px" style="border:none; border-radius:15px;"></iframe>
     </div>
   </div>
 </div>
