--- a/index.html
+++ b/index.html
@@ -368,20 +368,13 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
     <div class="card" id="products">
       <a href="products.html" class="cta">🛍️ عرض المنتجات</a>
       <div class="products">
-        <div class="product">
-          <img src="images/تفاح.jpg" alt="تفاح">
-          <strong>بندورة</strong>
-        </div>
-        <div class="product">
-          <img src="images/موز.jpg" alt="موز">
-          <strong>موز</strong>
-        </div>
+        <iframe src="products.html" width="100%" height="700px" style="border:none; border-radius:15px;"></iframe>
       </div>
     </div>
     <div class="card">
       <h3>لوحة تحكم كاملة</h3>
       <p>إدارة الطلبات، المنتجات، والتقارير اليومية بسهولة</p>
-    <iframe src="products.html" width="100%" height="700px" style="border:none; border-radius:15px;"></iframe>
+   <iframe src="dashboard.html" width="100%" height="600px" style="border:none;"></iframe>
     </div>
   </div>
 </div>
