--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
   <div class="grid">
     <div class="card" id="products">
       <a href="products.html" class="cta">🛍️ عرض المنتجات</a>
-      <div class="products">
+     <div class="card">
         <iframe src="products.html" width="100%" height="700px" style="border:none; border-radius:15px;"></iframe>
       </div>
     </div>
