--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
     z-index:2 !important; 
     background:transparent;
   }
-  .profile-img { width:40px !important; height:40px !important;background:transparent; }
+  .profile-img { width:40px !important; height:40px !important;background:transparent; opacity: 0.5; /* غيري الرقم بين 0 و 1 */ }
   .manager-name { font-size:6px !important; margin-top:2px !important; display:block; }
+
+ 
+
 
   /* الخضار ملاصقة للشريط */
   .corner-img.veggies { width:100px !important; bottom:0 !important; left:0 !important; top:auto !important; z-index:1 !important; }
