--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
 /* === صور المدير والخضار === */
 .corner-img.veggies { position:absolute; top:0; left:0; width:260px; z-index:2; }
 .profile-wrapper { position:absolute; top:20px; right:20px; width:180px; text-align:center; z-index:4; }
-.profile-img { width:140px; height:140px; border-radius:50%; object-fit:cover; background:#fff; position:relative; z-index:3; }
+.profile-img { 
+  width:140px; 
+  height:140px; 
+  border-radius:0;          /* إزالة الدائرة */
+  object-fit:contain;       /* يحافظ على الصورة */
+  background:transparent;   /* إزالة الخلفية البيضاء */
+  position:relative; 
+  z-index:3; 
+}
 .glow-bg { position:absolute; inset:-15px; border-radius:50%; background:radial-gradient(circle,rgba(111,210,111,.5)0%,rgba(111,210,111,.25)45%,rgba(111,210,111,0)75%); filter:blur(12px); z-index:1; }
 .manager-name { margin-top:8px; font-size:14px; color:#eaffea; }
 
